# schmutz

./: .dir-locals.el  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.rst  default.nix  guix.scm  shell.nix
.github/workflows/: test.yml
cmake/: SchmutzUtils.cmake
doc/: CMakeLists.txt  Makefile  conf.py  doxygen.config  index.rst  reference.rst  sphinx-html-hack.bash  tutorial.rst
example/: CMakeLists.txt  module-use.scm  module.scm.cpp  module.scm.in  usage.scm
nix/: callable_traits.nix  docs.nix
scm/: group.hpp  list.hpp  scm.hpp  type.hpp  val.hpp
scm/detail/: convert.hpp  define.hpp  finalizer_wrapper.hpp  function_args.hpp  invoke.hpp  pack.hpp  subr_wrapper.hpp  util.hpp
test/: CMakeLists.txt  module.scm.cpp  module.scm.in  tests.scm
tools/travis/: ssh-key.enc  ssh-key.pub
